# microservices-workshop

bash/: Dockerfile  README  main.sh  script.bash  test_function.sh  unit_test.bats
c#/: .dockerignore  Dockerfile  README  demo-api.slnx  script.bash
c#/demo-api/: Program.cs  README  UnitTest.cs  demo-api.csproj
c#/demo-api.Tests/: UnitTest1.cs  demo-api.Tests.csproj
c#/demo-api/Controller/: HelloController.cs
c#/demo-api/Log/: Logger.cs
c#/demo-api/Properties/: launchSettings.json
dart/: .dockerignore  Dockerfile  README  main.dart  pubspec.yaml  script.bash
dart/lib/: unit_test.dart
dart/test/: demo_api_test.dart  unit_test.dart
go/: Dockerfile  README  go.mod  main.go  script.bash  unit_test.go
java/helloworld/: Dockerfile  README.md  pom.xml  script.bash
java/helloworld/src/main/java/com/example/helloworld/: HelloWorldApplication.java  HelloWorldController.java
java/helloworld/src/main/resources/: logback-spring.xml
java/helloworld/src/test/java/com/example/helloworld/: TestFunction.java  UnitTests.java
javascript/: .gitignore  Dockerfile  README  main.js  main.test.js  package-lock.json  package.json  script.bash  test.js
php/: Dockerfile  README  composer.json  main.php  script.bash  test_function.php
php/tests/: AddTest.php
python/: .dockerignore  Dockerfile  README  main.py  script.bash  test_add.py
rust/helloworld/: Cargo.toml  Dockerfile  README  script.bash
rust/helloworld/src/: main.rs
