[package]
name = "helloworld"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
